[gd_scene load_steps=3 format=3 uid="uid://c7x2b3n4m5m"]

[ext_resource type="Script" path="res://Debug/convoy_visualizer_test.gd" id="1_test"]
[ext_resource type="PackedScene" uid="uid://c7t8x2dgbw0h3" path="res://Scenes/UI/ConvoyVisualizer/ConvoyVisualizer.tscn" id="2_vis"]

[node name="ConvoyVisualizerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_test")

[node name="ConvoyVisualizer" parent="." instance=ExtResource("2_vis")]
layout_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 120

[node name="DebugPanel" type="PanelContainer" parent="CanvasLayer"]
offset_left = 20.0
offset_top = 20.0
offset_right = 450.0
offset_bottom = 200.0
mouse_filter = 0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/DebugPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "CONVOY DEBUG TOOLS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StateButton" type="Button" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "State: DRIVING"

[node name="DirectionButton" type="Button" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Direction: RIGHT"

[node name="ResetButton" type="Button" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset Convoy Position / Unstuck"

[node name="DifficultyLabel" type="RichTextLabel" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center]Terrain Difficulty: 0.50[/center]"
fit_content = true

[node name="DifficultySlider" type="HSlider" parent="CanvasLayer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.05
value = 0.5
